--- a/error.html
+++ b/error.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1>Erreur</h1>
         <p>Attends, tu travailles chez Lactalis??</p>
-        <img src="../src/assets/loose.png" alt="Erreur" style="max-width:300px;width:100%;margin:20px 0;">
+        <img src="src/assets/loose.png" alt="Erreur" style="max-width:300px;width:100%;margin:20px 0;">
         <br>
         <button id="backButton">Retour</button>
     </div>
